force-app/main/default/objects/MatchStatistic__c/MatchStatistic__c.object-meta.xml
<CustomObject>
    <label>MatchStatistic</label>
    <nameField>
        <displayFormat>MatchStatistic - {000000}</displayFormat>
        <label>MatchStatistic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MatchStatistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>