force-app/main/default/objects/MatchStatistic__c/fields/Assist__c.field-meta.xml
<CustomField>
    <fullName>Assist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if shot was after partner passes</description>
    <label>Shot After Assist</label>
    <type>Checkbox</type>
</CustomField>