force-app/main/default/objects/MatchStatistic__c/fields/CornerOrFreeKick__c.field-meta.xml
<CustomField>
    <fullName>CornerOrFreeKick__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if shot was after corner kick or free kick</description>
    <label>Shot After Corner Kick Or Free Kick</label>
    <type>Checkbox</type>
</CustomField>