force-app/main/default/objects/MatchStatistic__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Type of Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shot</fullName>
            </value>
            <value>
                <fullName>Total Shots</fullName>
            </value>
            <value>
                <fullName>Shots On Target</fullName>
            </value>
            <value>
                <fullName>Possesion</fullName>
                <default>true</default>
                <label>Possesion</label>
            </value>
            <value>
                <fullName>Total Passes</fullName>
            </value>
            <value>
                <fullName>Completed Passes</fullName>
            </value>
            <value>
                <fullName>Fouls</fullName>
            </value>
            <value>
                <fullName>Yellow Card</fullName>
            </value>
            <value>
                <fullName>Red Card</fullName>
            </value>
            <value>
                <fullName>Offsides</fullName>
            </value>
            <value>
                <fullName>Corners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>