force-app/main/default/objects/MatchStatistic__c/fields/EventValue__c.field-meta.xml
<CustomField>
    <fullName>EventValue__c</fullName>
    <label>Value of statistical index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>