force-app/main/default/objects/MatchStatistic__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>You should choose team that participate in this match.</errorMessage>
        <filterItems>
            <field>$Source.Team__c</field>
            <operation>equals</operation>
            <valueField>Match__c.HomeTeam__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Team__c</field>
            <operation>equals</operation>
            <valueField>Match__c.Visitors__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>