force-app/main/default/objects/MatchStatistic__c/fields/Minute__c.field-meta.xml
<CustomField>
    <fullName>Minute__c</fullName>
    <label>Minute of event</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>