force-app/main/default/objects/MatchStatistic__c/fields/Penalti__c.field-meta.xml
<CustomField>
    <fullName>Penalti__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if shot was from penalti kick</description>
    <label>Shot From Penalti</label>
    <type>Checkbox</type>
</CustomField>