force-app/main/default/objects/MatchStatistic__c/fields/ShotAccuracy__c.field-meta.xml
<CustomField>
    <fullName>ShotAccuracy__c</fullName>
    <label>Accuracy Of Shot</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EventType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>