force-app/main/default/objects/MatchStatistic__c/fields/ShotPosition__c.field-meta.xml
<CustomField>
    <fullName>ShotPosition__c</fullName>
    <label>Position Of Shot</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EventType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Outside The Box</fullName>
                <label>Outside The Penalty Area</label>
            </value>
            <value>
                <fullName>Penalty Area</fullName>
                <label>Penalty Area + Nine Meter Arc</label>
            </value>
            <value>
                <fullName>Goal Area</fullName>
                <label>Goal Area + Penalty Spot</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>