force-app/main/default/objects/MatchStatistic__c/fields/ShotResistance__c.field-meta.xml
<CustomField>
    <fullName>ShotResistance__c</fullName>
    <label>Resistance To Shot</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EventType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>Low Resistance (distance to opponent greater than 2 metre)</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Medium Resistance (distance to opponent from 1 to 2 metre)</label>
            </value>
            <value>
                <fullName>Hard</fullName>
                <label>Hard Resistance (distance to opponent less than 1 metre)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>