force-app/main/default/objects/MatchStatistic__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>