force-app/main/default/objects/MatchStatistic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Match__c</columns>
    <columns>Team__c</columns>
    <columns>Minute__c</columns>
    <columns>EventType__c</columns>
    <columns>EventValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>